# Dream

./: .env.example  .gitignore  CLAUDE.md  README.md  ai女友系统架构总览.md  pyproject.toml  run.bat  run.sh  开发提示词.md
.claude/: settings.local.json
cclogs/: claude.md
config/: __init__.py  settings.py
config/knowledge/: dialogue_dataset.json  dialogue_examples.json
config/personalities/: gentle_caring.yaml  intellectual.yaml  lively_cute.yaml
config/prompts/memory/: consolidation_prompt.txt  extraction_prompt.txt
config/prompts/system/: base_prompt.txt
config/security/: filters.yaml  rate_limits.yaml
data/vector_store/: dialogue_index.faiss
docker/: Dockerfile  docker-compose.yml
requirements/: base.txt  dev.txt  prod.txt  test.txt
src/: __init__.py  app.py  main.py
src/core/: __init__.py
src/core/conversation/: __init__.py  engine.py
src/core/coordinator/: __init__.py  dispatcher.py
src/core/personality/: __init__.py  system.py
src/core/relationship/: __init__.py  builder.py
src/core/security/: __init__.py  filter.py
src/interfaces/: __init__.py
src/interfaces/cli/: __init__.py  shell.py
src/interfaces/web/: __init__.py  chat.html  emotion_monitor.html  monitor.html
src/interfaces/wechat/: __init__.py  client.py  handler.py
src/models/: __init__.py  conversation.py  memory.py  system.py  user.py
src/scripts/: __init__.py  import_dialogues.py  setup.py
src/services/: __init__.py
src/services/ai/: __init__.py  embedding_service.py  openai_service.py  provider.py  qianwen_service.py  zhipu_service.py
src/services/emotion/: __init__.py  ai_emotion_state.py  analyzer.py
src/services/knowledge/: __init__.py  dialogue_kb.py  qdrant_store.py  rag_service.py  vector_store.py
src/utils/: __init__.py  exceptions.py  helpers.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_conversation_flow.py
tests/unit/: test_memory.py  test_personality.py  test_utils.py
(+12 files in other folders)
